@@ -16,8 +16,6 @@ SHORT TERM STUFF (this section should always be empty in a release version!)
                  (well, close to it anyhow)
 ---------------------------------------------------------------------------
 
-- add $r->get_server_port method
-
 - /perl/perl-status?sig dumps core under hpux 10.20
    [David-Michael.Lincke@unisg.ch]
 
